# edgelab

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: settings.yaml
notebooks/: 01_signal_research.ipynb
src/intraday/: __init__.py  app.py  config.py
src/intraday/backtest/: costs.py  engine.py  stats.py  xsmomentum.py
src/intraday/brokers/: angelone.py  base.py
src/intraday/paper/: bot.py  journal.py
src/intraday/risk/: manager.py
src/intraday/signals/: __init__.py  breakouts.py  candlesticks.py  daily_trend.py  helpers.py  indicators.py  mean_dip.py  mean_dip_daily.py  mean_reversion.py  pivots.py  registry.py  trend.py
